--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,16 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# Java 17 configuration
+org.gradle.java.home=C:/Program Files/Java/jdk-17
+
+
+# Enable Gradle daemon for faster builds
+org.gradle.daemon=true
+
+# Enable parallel execution
+org.gradle.parallel=true
+
+# Enable build cache
+org.gradle.caching=true
